add tests, migrate to java 25